--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -105,6 +105,7 @@ new-content=Contingut nou
 new-experience=Experiència nova
 new-segment=Segment nou
 no-collection-selected-yet=Encara no s'ha seleccionat cap col·lecció
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=Cap segment
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Els ginys que no permetin crear instàncies només es poden incrustar un cop a la mateixa pàgina.
 not-translated=No traduït
