--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -37,6 +37,7 @@ container=Contenedor
 container-configuration=Configuración del contenedor
 container-width=Ancho del contenedor
 content-display=Visualización de contenido
+content-edition=Content Edition (Automatic Copy)
 content-mapping=Asignación de contenidos
 content-name=Nombre del contenido
 content-page-editor-configuration-name=Editor de páginas de contenido
@@ -104,6 +105,7 @@ new-content=Nuevo contenido
 new-experience=Nueva experiencia
 new-segment=Nuevo segmento
 no-collection-selected-yet=No hay ninguna colección seleccionada
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=Sin segmentos
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Un widget que no permita crear instancias solo se puede incorporar una vez en la misma página.
 not-translated=No traducido
@@ -117,6 +119,7 @@ padding-right=Relleno derecho
 padding-top=Relleno superior
 padding-vertical=Relleno vertical
 page-conversion-description=La conversión de página se muestra en la vista previa siguiente. Realice las modificaciones necesarias antes de publicar la conversión, o bien descarte el borrador para conservar el estado original de la página de widget.
+page-design=Page Design (Automatic Copy)
 page-editor-auto-extend-session-enabled-description=Al habilitar esta opción, se extenderá automáticamente la sesión mientras el editor de páginas esté abierto.
 page-editor-configuration-name=Editor de páginas
 page-structure=Estructura de página
