--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -37,6 +37,7 @@ container=Conteneur
 container-configuration=Configuration du conteneur
 container-width=Largeur du conteneur
 content-display=Affichage du contenu
+content-edition=Content Edition (Automatic Copy)
 content-mapping=Mappage du contenu
 content-name=Nom du contenu
 content-page-editor-configuration-name=Éditeur de page de contenu
@@ -104,6 +105,7 @@ new-content=Nouveau contenu
 new-experience=Nouvelle expérience
 new-segment=Nouveau segment
 no-collection-selected-yet=Aucune collection sélectionnée pour le moment
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=Aucun segment
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Les widgets sans instance peuvent être intégrés une seule fois sur une même page.
 not-translated=Non traduit
@@ -117,6 +119,7 @@ padding-right=Remplissage à droite
 padding-top=Remplissage supérieur
 padding-vertical=Remplissage vertical
 page-conversion-description=La conversion de page est affichée dans l'aperçu ci-dessous. Apportez les modifications nécessaires avant de la publier ou supprimez le brouillon pour laisser la page de widget dans son état d'origine.
+page-design=Page Design (Automatic Copy)
 page-editor-auto-extend-session-enabled-description=Activer cette option permettra d'étendre automatiquement la session quand l'éditeur de pages est ouvert.
 page-editor-configuration-name=Éditeur de pages
 page-structure=Structure de page
