--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -37,6 +37,7 @@ container=Konténer
 container-configuration=Tároló konfigurációja
 container-width=Konténer szélessége
 content-display=Tartalom megjelenítése
+content-edition=Content Edition (Automatic Copy)
 content-mapping=Tartalom leképezése
 content-name=Tartalom neve
 content-page-editor-configuration-name=Tartalmi oldal szerkesztője
@@ -104,6 +105,7 @@ new-content=Új tartalom
 new-experience=Új élmény
 new-segment=Új szegmens
 no-collection-selected-yet=Még nincs kiválasztva gyűjtemény
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=Nincs szegmens
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Nem példányosítható widgetek csak egyszer ágyazhatók be egy oldalra.
 not-translated=Nincs lefordítva
@@ -117,6 +119,7 @@ padding-right=Jobbra k
 padding-top=Kitöltés teteje
 padding-vertical=Függőleges kitöltés
 page-conversion-description=Az oldal átalakítása az alábbi előnézeten látható. Az átalakítás közzététele előtt végezze el a szükséges módosításokat, vagy vesse el a piszkozatot, hogy a widget oldal az eredeti állapotában maradjon.
+page-design=Page Design (Automatic Copy)
 page-editor-auto-extend-session-enabled-description=Az engedélyezés automatikusan meghosszabbítja a munkamenetet, amíg az oldalszerkesztő nyitva van.
 page-editor-configuration-name=Oldalszerkesztő
 page-structure=Oldalszerkezet
