--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -105,6 +105,7 @@ new-content=New Content
 new-experience=New Experience
 new-segment=New Segment
 no-collection-selected-yet=Nessuna collezione è stata selezionata
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=No Segments
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Noninstaceable widgets can be embedded only once on the same page.
 not-translated=Not Translated
