--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -105,6 +105,7 @@ new-content=محتوى جديد
 new-experience=خبرة جديدة
 new-segment=مقطع جديد
 no-collection-selected-yet=لم يتم تحديد أي مجموعة بعد
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=بلا مقاطع
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=يمكن تضمن عناصر واجهة مستخدم غير قابل لإنشاء مثيل مرة واحدة فقط في نفس الصفحة.
 not-translated=غير مترجم
