--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_en_AU.properties
@@ -105,6 +105,7 @@ new-content=New Content (Automatic Copy)
 new-experience=New Experience (Automatic Copy)
 new-segment=New Segment (Automatic Copy)
 no-collection-selected-yet=No Collection Selected Yet (Automatic Copy)
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=No Segments (Automatic Copy)
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Noninstaceable widgets can be embedded only once on the same page. (Automatic Copy)
 not-translated=Not Translated (Automatic Copy)
