--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
@@ -105,6 +105,7 @@ new-content=新規コンテンツ
 new-experience=新しいエクスペリエンス
 new-segment=新しいセグメント
 no-collection-selected-yet=まだコレクションが選択されていません
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=セグメントなし
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=インスタンス化できないウィジェットは、同一ページ上に一度だけ埋め込むことができます。
 not-translated=未翻訳
