--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -105,6 +105,7 @@ new-content=Nytt innhold
 new-experience=Ny opplevelse
 new-segment=Nytt segment
 no-collection-selected-yet=Ingen samling valgt enda
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=Ingen segment
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Noninstaceable widgets can be embedded only once on the same page.
 not-translated=Ikke oversatt
