--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ta_IN.properties
@@ -105,6 +105,7 @@ new-content=New Content
 new-experience=புதிய அனுபவம்
 new-segment=New Segment
 no-collection-selected-yet=No Collection Selected Yet
+no-fields-available-for-x-editable=No fields available for {0} editable. (Automatic Copy)
 no-segments=No Segments
 noninstanceable-widgets-can-be-embedded-only-once-on-the-same-page=Noninstaceable widgets can be embedded only once on the same page.
 not-translated=மொழிபெயர்க்கப்படவில்லை
