--- a/modules/apps/translation/translation-test/src/testIntegration/resources/com/liferay/translation/dependencies/test-journal-article_122_Jap.xlf
+++ b/modules/apps/translation/translation-test/src/testIntegration/resources/com/liferay/translation/dependencies/test-journal-article_122_Jap.xlf
@@ -1,23 +1,23 @@
 <?xml version="1.0"?>
 
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" srcLang="en-US" trgLang="es-ES" version="2.0">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" srcLang="en-US" trgLang="ja-JP" version="2.0">
 	<file id="com.liferay.journal.model.JournalArticle:122">
 		<unit id="title">
 			<segment>
 				<source><![CDATA[This is the Title]]></source>
-				<target><![CDATA[Este es el titulo]]></target>
+				<target><![CDATA[これはタイトルです]]></target>
 			</segment>
 		</unit>
 		<unit id="description">
 			<segment>
 				<source><![CDATA[This is the summary]]></source>
-				<target><![CDATA[Este es el resumen]]></target>
+				<target><![CDATA[これは要約です]]></target>
 			</segment>
 		</unit>
 		<unit id="name">
 			<segment>
 				<source><![CDATA[<p>This is the content</p>]]></source>
-				<target><![CDATA[<p>Este es el contenido</p>]]></target>
+				<target><![CDATA[<p>これが内容です</p>]]></target>
 			</segment>
 		</unit>
 	</file>
