--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ca.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Tipus d'element de menú arrel
 secondary=Secundari
 secondary-navigation=Navegació secundària
 select-navigation=Selecciona navegació
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Selecciona menú de navegació del lloc
 select-site-navigation-menu-item=Selecciona element de navegació del lloc
 set-custom-name=Defineix el nom personalitzat
