--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_en_AU.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Root Menu Item Type (Automatic Copy)
 secondary=Secondary (Automatic Copy)
 secondary-navigation=Secondary Navigation (Automatic Copy)
 select-navigation=Select Navigation (Automatic Copy)
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Select Site Navigation Menu (Automatic Copy)
 select-site-navigation-menu-item=Select Site Navigation Menu Item (Automatic Copy)
 set-custom-name=Set Custom Name (Automatic Copy)
