--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_es.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Tipo de elemento de menú raíz
 secondary=Secundario
 secondary-navigation=Navegación secundaria
 select-navigation=Seleccionar navegación
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Seleccionar menú de navegación del sitio
 select-site-navigation-menu-item=Seleccionar elemento de menú de navegación del sitio
 set-custom-name=Establecer nombre personalizado
