--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_fa.properties
@@ -106,6 +106,7 @@ root-menu-item-type=نوع آیتم منوی ریشه
 secondary=ثانویه
 secondary-navigation=منوی ثانویه
 select-navigation=انتخاب ناوبری
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Select Site Navigation Menu
 select-site-navigation-menu-item=Select Site Navigation Menu Item
 set-custom-name=نام سفارشی را تنظیم کنید
