--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_fi.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Juuren Valikkokohdan Tyyppi
 secondary=Toissijainen
 secondary-navigation=Toissijainen Navigointi
 select-navigation=Valitse Navigointi
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Valitse Sivuston Navigointivalikko
 select-site-navigation-menu-item=Valitse Sivuston Navigointivalikon Kohta
 set-custom-name=Aseta Mukautettu Nimi
