--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_iw.properties
@@ -106,6 +106,7 @@ root-menu-item-type=סוג פריט תפריט שורש
 secondary=משני
 secondary-navigation=ניווט משני
 select-navigation=בחר ניווט
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=בחר תפריט ניווט אתרים
 select-site-navigation-menu-item=בחר פריט תפריט ניווט אתרים
 set-custom-name=Set Custom Name
