--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_nl.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Itemtype rootmenu
 secondary=Secundair
 secondary-navigation=Secundaire navigatie
 select-navigation=Navigatie selecteren
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Navigatiemenu site selecteren
 select-site-navigation-menu-item=Navigatiemenu-item site selecteren
 set-custom-name=Aangepaste naam instellen
