--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ar.properties
@@ -106,6 +106,7 @@ root-menu-item-type=نوع عنصر القائمة الجذر
 secondary=ثانوي
 secondary-navigation=التنقل الثانوي
 select-navigation=تحديد التنقل
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=تحديد قائمة تنقل الموقع
 select-site-navigation-menu-item=تحديد عنصر قائمة التنقل في الموقع
 set-custom-name=تعيين اسم مخصص
