--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_de.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Typ Root-Menüpunkt
 secondary=Sekundär
 secondary-navigation=Sekundäre Navigation
 select-navigation=Navigation auswählen
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Site-Navigationsmenü auswählen
 select-site-navigation-menu-item=Site-Navigationsmenüpunkt auswählen
 set-custom-name=Benutzerdefinierten Namen festlegen
