--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_fr.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Type d'élément du menu racine
 secondary=Secondaire
 secondary-navigation=Navigation Secondaire
 select-navigation=Sélectionner la Navigation
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Sélectionner le menu de navigation du site
 select-site-navigation-menu-item=Sélectionner l'élément du menu de navigation du site
 set-custom-name=Définir un nom personnalisé
