--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_hu.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Gyökér menüelem típusa
 secondary=Másodlagos
 secondary-navigation=Másodlagos navigáció
 select-navigation=Válasszon navigációt
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Válassza ki a webhely navigációs menüjét
 select-site-navigation-menu-item=Válassza ki a webhely navigációs menüelemét
 set-custom-name=Egyéni név beállítása
