--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ja.properties
@@ -106,6 +106,7 @@ root-menu-item-type=ルートメニュー項目の種類
 secondary=セカンダリ
 secondary-navigation=セカンダリー・ナビゲーション
 select-navigation=ナビゲーションを選択する
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=サイトナビゲーション メニューを選択します。
 select-site-navigation-menu-item=サイトナビゲーション メニューの項目を選択します。
 set-custom-name=カスタム名を設定
