--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ko.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Root Menu Item Type
 secondary=Secondary
 secondary-navigation=Secondary Navigation
 select-navigation=Select Navigation
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Select Site Navigation Menu
 select-site-navigation-menu-item=Select Site Navigation Menu Item
 set-custom-name=Set Custom Name
