--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_pt_BR.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Tipo de item do menu raiz
 secondary=Secundário
 secondary-navigation=Navegação secundária
 select-navigation=Selecionar navegação
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Seleciona menu de navegação do site
 select-site-navigation-menu-item=Selecionar o item do menu de navegação do site
 set-custom-name=Definir nome personalizado
