--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_sv.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Objekttyp i rotmeny
 secondary=Sekundär
 secondary-navigation=Sekundär navigering
 select-navigation=Välj navigering
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=Välj navigeringsmeny för webbplats
 select-site-navigation-menu-item=Välj objekt i navigeringsmeny för webbplats
 set-custom-name=Ange anpassat namn
