--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_ta_IN.properties
@@ -106,6 +106,7 @@ root-menu-item-type=Root Menu Item Type
 secondary=இரண்டாம் நிலை
 secondary-navigation=இரண்டாம் நிலை நேவிகேஷன்
 select-navigation=நேவிகேஷனைத் தேர்ந்தெடுக்கவும்
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=தளத்தின் Site Navigation Menu-வைத் தேர்ந்தெடுக்கவும்
 select-site-navigation-menu-item=தளத்தின் Site Navigation Menu Item-த்தைத் தேர்ந்தெடுக்கவும்
 set-custom-name=Custom பெயர் அமை
