--- a/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/site-navigation/site-navigation-lang/src/main/resources/content/Language_zh_CN.properties
@@ -106,6 +106,7 @@ root-menu-item-type=根菜单项类型
 secondary=辅助
 secondary-navigation=次导航
 select-navigation=选择导航
+select-parent=Select Parent (Automatic Copy)
 select-site-navigation-menu=选择站点导航菜单
 select-site-navigation-menu-item=选择网站导航菜单项
 set-custom-name=设置自定义名称
