--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=Grup de camps
 filter-parameter-name=Nom del paràmetre de filtre
 form-entries=Entrades de formularis
 form-settings=Configuració del formulari
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=Formulari ha estat compartit mitjançant correu electrònic. (Automatic Translation)
 forms=Formularis
 from-autofill=De l'emplenament automàtic
 from-data-provider=Del proveïdor de dades
