--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=Kentät-ryhmä
 filter-parameter-name=Suodata Parametrin Nimi
 form-entries=Lomakekirjaukset
 form-settings=Lomakkeen asetukset
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=Form was shared via email. (Automatic Copy)
 forms=Lomakkeet
 from-autofill=Lomakkeen Automaatitäyttö
 from-data-provider=Lomakkeen Tiedontarjoaja
