--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_iw.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=Fields Group
 filter-parameter-name=שם פרמטר המסנן
 form-entries=רשומות טפסים
 form-settings=הגדרות טופס
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=הטופס היה משותף באמצעות דואר אלקטרוני. (Automatic Translation)
 forms=טפסים
 from-autofill=ממילוי אוטומטי
 from-data-provider=מספק נתונים
