--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=Feltgrupper
 filter-parameter-name=Filterparameternavn
 form-entries=Skjemainnlegg
 form-settings=Skjemainnstillinger
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=Skjemaet ble delt via e-post. (Automatic Translation)
 forms=Skjemaer
 from-autofill=Fra autofyll
 from-data-provider=Skjemadatatilbyder
