--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=Fields Group
 filter-parameter-name=ชื่อพารามิเตอร์ตัวกรอง
 form-entries=รายการแบบฟอร์ม
 form-settings=การตั้งค่าแบบฟอร์ม
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=ฟอร์มถูกแชร์ทางอีเมล (Automatic Translation)
 forms=ฟอร์ม
 from-autofill=ฟอร์มแบบป้อนอัตโนมัติ
 from-data-provider=ฟอร์มผู้ให้บริการข้อมูล
