--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=مجموعة الحقول
 filter-parameter-name=اسم معلمة التصفية
 form-entries=إدخالات النماذج
 form-settings=إعدادات النموذج
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=تمت مشاركة النموذج عبر البريد الإلكتروني. (Automatic Translation)
 forms=النماذج
 from-autofill=من الملء التلقائي
 from-data-provider=من موفر البيانات
