--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_en_GB.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filter Parameter Name (Automatic Copy)
 form-entries=Form Entries (Automatic Copy)
 form-settings=Form Settings (Automatic Copy)
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=Form was shared via email. (Automatic Copy)
 forms=Forms (Automatic Copy)
 from-autofill=From Autofill (Automatic Copy)
 from-data-provider=From Data Provider (Automatic Copy)
