--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=フィールドグループ
 filter-parameter-name=パラメータ名で絞り込む
 form-entries=フォームエントリー
 form-settings=フォームの設定
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=Form was shared via email. (Automatic Copy)
 forms=フォーム
 from-autofill=自動補完から
 from-data-provider=データプロバイダー
