--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ko.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=Fields Group
 filter-parameter-name=Filter Parameter Name
 form-entries=Form Entries
 form-settings=Form Settings
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=양식을 이메일로 공유했습니다. (Automatic Translation)
 forms=Forms
 from-autofill=From Autofill
 from-data-provider=From Data Provider
