--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
@@ -156,7 +156,7 @@ fieldset-field-type-label=字段组
 filter-parameter-name=筛选参数名称
 form-entries=表格条目
 form-settings=表单设置
-form-shared-via-email=Form shared via email. (Automatic Copy)
+form-was-shared-via-email=表格通过电子邮件共享。 (Automatic Translation)
 forms=表单
 from-autofill=从自动填充
 from-data-provider=来自数据提供器
